--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "concurrently": "^4.1.0",
     "config": "^3.1.0",
+    "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "node-cache": "^4.2.0",
     "nodemon": "^1.18.11",
